ES-990 merging services
